Test for update repo factory. Added "community" plugins as standard